# python_inventory_service_project

./: .gitignore  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt  pyproject.toml  service.py
k8s/: deployment.yaml
tests/: test_core.py
